# latent-signals

./: .env.example  .gitignore  CLAUDE.md  INITIAL_PROMPT.md  README.md  SPEC.md  TODO.md  architecture.md  data-models.md  development-guide.md  index.md  product_brief.md  project-overview.md  project-scan-report.json  pyproject.toml  research.md  run_query.py  source-tree-analysis.md
config/: backtest_email.yaml  backtest_email_control.yaml  backtest_linear.yaml  backtest_notion.yaml  backtest_plausible.yaml  backtest_vscode_control.yaml  default.yaml
config/competitor_features/: evernote_2017.yaml  gmail_2018.yaml  google_analytics_2018.yaml  jira_2019.yaml  vscode_2019.yaml
latent-signals/: dev_log.md
latent-signals/01_strategy/: competitive_landscape.md  positioning.md  product_brief.md
latent-signals/02_requirements/: design_constraints.md  scoring_formula_spec_v2.md  scoring_function_spec.md  user_flows.md
latent-signals/03_architecture/: data_pipeline.md  infrastructure.md  technical_stack.md
latent-signals/04_decisions/: decision_log.md
latent-signals/05_validation/results/: RUN_MANIFEST.md  (+2 more)
latent-signals/06_business/: gtm_plan.md  pricing_model.md
scripts/: arctic_shift_volume_check.py  arctic_shift_volume_check_vscode.py  exa_discovery_email.py  exa_discovery_notion.py  exa_discovery_plausible.py  exa_discovery_probe.py  exa_discovery_probe_reddit.py  exa_discovery_vscode.py  experiment_ner.py  experiment_zero_shot_labels.py  experiment_zero_shot_labels_v2.py
src/latent_signals/: __init__.py  cli.py  config.py  models.py  run_pipeline.py
(+42 files in other folders)
